--- a/parteinicial/inicio.css
+++ b/parteinicial/inicio.css
@@ -95,6 +95,11 @@ h1, h2, h3 {
   height: 60px;
   display: inline-block;
 }
+.logo {
+  max-width: 120px;
+  height: auto;
+  margin: 10px 0;
+}
 
 .role-select {
   margin: 30px 0;
